# data-engineering-zommcamp

pipeline/: .env.example  Dockerfile  README.md  docker-compose.yaml  ingest_data.py  ingest_taxi_data_parquet.py  ingest_zones.py  notebook.ipynb  pyproject.toml
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  variables.tf
